# gergios

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TODO.md  build.sh
minix/commands/: CMakeLists.txt
minix/commands/fetch/: Makefile
minix/drivers/: CMakeLists.txt  Makefile
minix/drivers/audio/: CMakeLists.txt  Makefile
minix/drivers/bus/: CMakeLists.txt  Makefile
minix/drivers/hid/: CMakeLists.txt  Makefile
minix/drivers/iommu/: Makefile
minix/drivers/net/: CMakeLists.txt  Makefile
minix/drivers/power/: Makefile
minix/drivers/printer/: Makefile
minix/drivers/storage/: CMakeLists.txt  Makefile
minix/drivers/tty/: CMakeLists.txt  Makefile
minix/fs/: CMakeLists.txt  Makefile
minix/fs/ext2/: CMakeLists.txt
minix/fs/ext4/: CMakeLists.txt  ffi.h  ffi_bridge.c  main.c  table.c
minix/fs/hgfs/: CMakeLists.txt
minix/fs/isofs/: CMakeLists.txt
minix/fs/mfs/: CMakeLists.txt  write.c
minix/fs/pfs/: CMakeLists.txt
minix/fs/procfs/: CMakeLists.txt
minix/fs/ptyfs/: CMakeLists.txt
minix/fs/vbfs/: CMakeLists.txt
minix/kernel/: CMakeLists.txt  Makefile  debug.c  extracted-mfield.h  glo.h  kernel.h  main.c  proc.c  proto.h  system.c  watchdog.h
minix/kernel/system/: Makefile.inc  do_endksig.c  do_exec.c  do_fork.c  do_getksig.c  do_mcontext.c  do_runctl.c  do_sigreturn.c  do_sigsend.c  (+3 more)
minix/lib/: CMakeLists.txt  Makefile
minix/servers/: CMakeLists.txt  Makefile
minix/tests/: CMakeLists.txt  Makefile  test72.c  test79.c
minix/usr.bin/: CMakeLists.txt
minix/usr.sbin/: CMakeLists.txt
rust/: Cargo.toml  Makefile  Makefile.inc  x86_64-unknown-minix.json
rust/audio-buf/: Cargo.toml  Makefile
rust/banner/: Cargo.toml
rust/basename/: Cargo.toml  Makefile
rust/cal/: Cargo.toml
rust/calendar/: Cargo.toml
rust/cat/: Cargo.toml  Makefile
rust/chmod/: Cargo.toml  Makefile
rust/cksum/: Cargo.toml  Makefile
rust/cmp/: Cargo.toml  Makefile
rust/col/: Cargo.toml
rust/colcrt/: Cargo.toml
rust/colrm/: Cargo.toml
rust/column/: Cargo.toml
rust/comm/: Cargo.toml  Makefile
rust/cp/: Cargo.toml  Makefile
rust/csplit/: Cargo.toml
rust/ctags/: Cargo.toml
rust/cut/: Cargo.toml  Makefile
rust/date/: Cargo.toml  Makefile
rust/dd/: Cargo.toml  Makefile
rust/df/: Cargo.toml  Makefile
rust/dirname/: Cargo.toml  Makefile
rust/domainname/: Cargo.toml  Makefile
rust/du/: Cargo.toml  Makefile
rust/e1000/: Cargo.toml
rust/echo/: Cargo.toml  Makefile
rust/env/: Cargo.toml  Makefile
rust/expand/: Cargo.toml  Makefile
rust/ext4-core/: Cargo.toml
rust/false/: Cargo.toml  Makefile
rust/finger/: Cargo.toml
rust/flock/: Cargo.toml
rust/fmt/: Cargo.toml
rust/fold/: Cargo.toml  Makefile
rust/fpr/: Cargo.toml
rust/from/: Cargo.toml
rust/fsplit/: Cargo.toml
rust/fuzz/: Cargo.toml
rust/genassym/: Cargo.toml
rust/gencat/: Cargo.toml
rust/getopt/: Cargo.toml
rust/grep/: Cargo.toml  Makefile
rust/head/: Cargo.toml  Makefile
rust/hexdump/: Cargo.toml
rust/hostname/: Cargo.toml  Makefile
rust/id/: Cargo.toml  Makefile
rust/ipcrm/: Cargo.toml
rust/ipcs/: Cargo.toml
rust/join/: Cargo.toml
rust/jot/: Cargo.toml
rust/kill/: Cargo.toml  Makefile
rust/lam/: Cargo.toml
rust/last/: Cargo.toml
rust/leave/: Cargo.toml
rust/ln/: Cargo.toml  Makefile
rust/locale/: Cargo.toml
rust/lock/: Cargo.toml
rust/logger/: Cargo.toml
rust/logname/: Cargo.toml
rust/lorder/: Cargo.toml
rust/ls/: Cargo.toml  Makefile
rust/machine/: Cargo.toml
rust/mcookie/: Cargo.toml
rust/menuc/: Cargo.toml
rust/mesg/: Cargo.toml
rust/minix-ahci/: Cargo.toml
rust/minix-alloc/: Cargo.toml  Makefile
rust/minix-driver/: Cargo.toml  Makefile
rust/minix-pci/: Cargo.toml
rust/minix-rs/: Cargo.toml  Makefile
rust/mkcsmapper/: Cargo.toml
rust/mkdep/: Cargo.toml
rust/mkdir/: Cargo.toml  Makefile
rust/mkesdb/: Cargo.toml
rust/mkfifo/: Cargo.toml
rust/mklocale/: Cargo.toml
rust/mkstr/: Cargo.toml
rust/mktemp/: Cargo.toml
rust/msgc/: Cargo.toml
rust/mv/: Cargo.toml  Makefile
rust/nbperf/: Cargo.toml
rust/net-parse/: Cargo.toml  Makefile
rust/newgrp/: Cargo.toml
rust/nice/: Cargo.toml
rust/nl/: Cargo.toml  Makefile
rust/nohup/: Cargo.toml  Makefile
rust/pagesize/: Cargo.toml
rust/paste/: Cargo.toml  Makefile
rust/pathchk/: Cargo.toml  Makefile
rust/pr/: Cargo.toml
rust/printenv/: Cargo.toml  Makefile
rust/printf/: Cargo.toml  Makefile
rust/procfs-path/: Cargo.toml  Makefile
rust/pwd/: Cargo.toml  Makefile
rust/pwhash/: Cargo.toml
rust/renice/: Cargo.toml
rust/rev/: Cargo.toml
rust/rm/: Cargo.toml  Makefile
rust/rmdir/: Cargo.toml  Makefile
rust/sdiff/: Cargo.toml
rust/seq/: Cargo.toml  Makefile
rust/shar/: Cargo.toml
rust/shlock/: Cargo.toml
rust/shuffle/: Cargo.toml
rust/sleep/: Cargo.toml  Makefile
rust/soelim/: Cargo.toml
rust/sort/: Cargo.toml  Makefile
rust/split/: Cargo.toml  Makefile
rust/stat/: Cargo.toml  Makefile
rust/sync/: Cargo.toml  Makefile
rust/tabs/: Cargo.toml
rust/tail/: Cargo.toml  Makefile
rust/tee/: Cargo.toml  Makefile
rust/test/: Cargo.toml  Makefile
rust/time/: Cargo.toml  Makefile
rust/touch/: Cargo.toml  Makefile
rust/tr/: Cargo.toml  Makefile
rust/true/: Cargo.toml  Makefile
rust/tsort/: Cargo.toml
rust/tty/: Cargo.toml  Makefile
rust/ul/: Cargo.toml
rust/uname/: Cargo.toml  Makefile
rust/unexpand/: Cargo.toml  Makefile
rust/unifdef/: Cargo.toml
rust/uniq/: Cargo.toml  Makefile
rust/units/: Cargo.toml
rust/unvis/: Cargo.toml
rust/users/: Cargo.toml
rust/uudecode/: Cargo.toml
rust/uuencode/: Cargo.toml
rust/uuidgen/: Cargo.toml
rust/virtio-blk/: Cargo.toml
rust/vis/: Cargo.toml
rust/w/: Cargo.toml
rust/wall/: Cargo.toml
rust/wc/: Cargo.toml  Makefile
rust/what/: Cargo.toml
rust/whereis/: Cargo.toml
rust/who/: Cargo.toml
rust/whois/: Cargo.toml
rust/write/: Cargo.toml
rust/xinstall/: Cargo.toml
rust/xstr/: Cargo.toml
rust/yes/: Cargo.toml  Makefile
(+742 files in other folders)
