[workspace]

members = [
    "audio-buf",
    "basename",
    "cat",
    "chmod",
    "cksum",
    "cmp",
    "comm",
    "cp",
    "cut",
    "date",
    "dd",
    "df",
    "dirname",
    "domainname",
    "du",
    "echo",
    "env",
    "expand",
    "false",
    "fold",
    "grep",
    "head",
    "hostname",
    "id",
    "kill",
    "ln",
    "ls",
    "mkdir",
    "mv",
    "minix-alloc",
    "minix-driver",
    "minix-rs",
    "net-parse",
    "nl",
    "nohup",
    "paste",
    "pathchk",
    "printenv",
    "printf",
    "procfs-path",
    "pwd",
    "rm",
    "rmdir",
    "seq",
    "sleep",
    "sort",
    "split",
    "stat",
    "sync",
    "tail",
    "tee",
    "test",
    "time",
    "touch",
    "tr",
    "true",
    "tty",
    "uname",
    "unexpand",
    "uniq",
    "wc",
    "yes",
]

resolver = "2"
