[workspace]

members = [
    "audio-buf",
    "basename",
    "banner",
    "cal",
    "calendar",
    "cat",
    "chmod",
    "cksum",
    "cmp",
    "col",
    "colcrt",
    "colrm",
    "column",
    "comm",
    "cp",
    "csplit",
    "ctags",
    "cut",
    "date",
    "dd",
    "df",
    "dirname",
    "domainname",
    "du",
    "echo",
    "env",
    "expand",
    "false",
    "finger",
    "flock",
    "fmt",
    "fold",
    "fpr",
    "from",
    "fsplit",
    "genassym",
    "gencat",
    "getopt",
    "grep",
    "head",
    "hexdump",
    "hostname",
    "id",
    "ipcrm",
    "ipcs",
    "join",
    "jot",
    "kill",
    "lam",
    "last",
    "leave",
    "ln",
    "locale",
    "lock",
    "logger",
    "logname",
    "lorder",
    "ls",
    "machine",
    "mcookie",
    "menuc",
    "mesg",
    "minix-alloc",
    "minix-driver",
    "minix-rs",
    "mkdep",
    "mkesdb",
    "mkfifo",
    "mkdir",
    "mkcsmapper",
    "mklocale",
    "mkstr",
    "mktemp",
    "msgc",
    "mv",
    "nbperf",
    "net-parse",
    "newgrp",
    "nice",
    "nl",
    "nohup",
    "pagesize",
    "paste",
    "pathchk",
    "pr",
    "printenv",
    "printf",
    "procfs-path",
    "pwd",
    "pwhash",
    "renice",
    "rev",
    "rm",
    "rmdir",
    "sdiff",
    "seq",
    "shar",
    "shlock",
    "shuffle",
    "sleep",
    "soelim",
    "sort",
    "split",
    "stat",
    "sync",
    "tabs",
    "tail",
    "tee",
    "test",
    "time",
    "touch",
    "tr",
    "true",
    "tsort",
    "tty",
    "ul",
    "uname",
    "unexpand",
    "unifdef",
    "uniq",
    "units",
    "unvis",
    "uuencode",
    "uudecode",
    "uuidgen",
    "users",
    "vis",
    "w",
    "wall",
    "wc",
    "what",
    "whereis",
    "who",
    "whois",
    "write",
    "xinstall",
    "xstr",
    "yes",
    "ext4-core",
]

resolver = "2"
